@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.5.5) unstable; urgency=low
   * processor: allow specifying relative URI in c:base=child
   * widget-request: verify the "path" argument
   * widget: allocate address from widget's pool
+  * widget-http: support multiple Set-Cookie response headers
 
  --
 
